Updated 3.1.3 and papers

--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -235,9 +235,11 @@ In \cite{barlow2017using}, the final paper (so far) on this tool, the researcher
 \bigskip
 
 %TODO: Check these texts and references
-In a very recent work \cite{leontaris2019decision}, researchers have looked into reducing the risk of supply disruptions. Due to the absence of sufficient historical data, they use expert judgement to analyse the risk of supply disruptions, using different weights to combine judgements from various experts. It was found that the combined judgement lead to a better outcome than any individual judgement, and in general it was found that disregarding the supply disruptions from estimations regarding offshore construction projects could lead to significant overruns in both schedule and budget. 
+In a very recent work \cite{leontaris2019decision}, researchers have looked into reducing the risk of supply disruptions. Due to the absence of sufficient historical data, they use expert judgement to analyse the risk of supply disruptions, using different weights to combine judgements from various experts. It was found that the combined judgement lead to a better outcome than any individual judgement. In general it was found that not taking the estimations of supply disruptions into account could lead to significant overruns in both schedule and budget. 
 
-The same authors have written about including dependencies between task duration \cite{leontaris2016probabilistic}. They use a non-parametric Bayesian Network to model dependant delays in task duration, so that if a vessel has a delay on a certain task, the task it performs afterwards has a higher chance to be delayed as well. So far they have only tested this technique with the main tasks for installation, but this technique could be used throughout all operations. 
+The same authors have written about whether dependencies between task duration \cite{leontaris2018probabilistic} should be considered. They use a non-parametric Bayesian Network to model dependant delays in task duration, so that if a vessel has a delay on a certain task, the task it performs afterwards has a higher chance to be delayed as well. So far they have only tested this technique with the main tasks for installation, but this technique could be used throughout all operations. The initial results are promising, and ought to be considered in the design of my own models. 
+
+%TODO: Add leontaris2016
 
 \bigskip
 
