--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -340,6 +340,14 @@
   publisher={Springer}
 }
 
+@article{leontaris2018probabilistic,
+  title={Probabilistic decision support for offshore wind operations},
+  author={Leontaris, Georgios and Morales-N{\'a}poles, Oswaldo and Wolfert, ARM Rogier},
+  jouranl={Probabilistic Safety Assessment and Management},
+  volume={14},
+  year={2019}
+}
+
 @article{leontaris2016probabilistic,
   title={Probabilistic scheduling of offshore operations using copula based environmental time series--An application for cable installation management for offshore wind farms},
   author={Leontaris, Georgios and Morales-N{\'a}poles, Oswaldo and Wolfert, ARM Rogier},
