--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -241,15 +241,15 @@ The same authors have written about whether dependencies between task duration \
 
 In another paper \cite{leontaris2016probabilistic} the same authors attempt to generate synthethic weather series, where the different metrics (wave height, wind speed, and potentially more like wave period and wind direction) are dependent on each other. For this they use copulas, which join multivariate distribution functions. They test their method with a project for laying the cables of an OWF. Their initial results show that this method could provide more insights into the realistic durations of offshore projects. 
 
-%TODO: CONTINUE here
-
 \bigskip
 
-The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}. In that, the problem of assigning specific crew members to specific tasks over long periods of time is considered. It goes more in depth than I will in my research as I will not consider individual crew members but parts of this research are still valuable for my research. It is stated that contractually each crew member has a certain limit on the length of time they are allowed to work, and then have a minimum amount of time to rest before their next shift. If this maximum amount of work time is surpassed, the costs go up as overtime salaries are higher than regular salaries. Additionally each crew member has a set amount of time they can be on the sea before needing time at shore. This is usually cut up in blocks of four or five weeks, as these contracts are standardised. While I do not plan to integrate this problem into my research on the level of individual crew members, these constraints will likely have to be considered in any research I do. For example it might not be accurate to assume costs of using a vessel strictly follow a linear pattern over time, as the increased costs of overtime will come in at some point. The times between port visits will also have to be constrained in some way to ensure crew members do not spend too much time offshore. However, these are still much lighter constraints than are considered by the research discussed. In it two types of crew members are considered; those with a fixed contract and outside hires who can be hired when needed. Additionally crew nationalities are considered, as ships with certain flags can only employ certain nationalities, and certain nationalities apparently do not work well together. For my research, these constraints relating to individual crew members will not be considered, and I will assume they are handled by the company that rents out the vessels (as they also provide the crew). 
+The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}. In that, the problem of assigning specific crew members to specific tasks over long periods of time is considered. Each crew member has a number of contractual requirements, both on a small and a large scale. Any shift has a a maximum length, and if this crew member has to work outside that maximum length they get payed more. Additionally there is a maximum amount of time a crew member can be offshore. This is usually cut up in blocks of four or five weeks, as these contracts are standardised. There are also restrictions on the nationalities of the crew members. Ships with certain flags cannot employ certain nationalities, and the researchers state that certain combinations nationalities do not work well. All this leads to a rather complex problem, which is outside the scope of my research. It is too detailed for me to fully incorporate in my research, which focuses on a larger scale and decisions that effect the entire life-cycle. On top of that, as stated in this research these decisions regarding specific crew members generally lie with the company renting out the vessel and not the company renting it, while my research sees vessels as a resource to rent rather than own. However, there are still valuable insights in this research. For example it shows there will be contractual obligations to go back to the shore at a regular interval to ensure the crew does not spend too much time offshore. 
 
 \bigskip
 
 Another logistical decision topic related to the offshore windfarm sites is deciding their layout. This is discussed in various papers, such as \cite{mosetti1994optimization,kusiak2010design,saavedra2011seeding,perez2013offshore,hou2017combined}. There has been a significant amount of research in this direction, though most of this research focuses on windfarm on land, instead of offshore. The latter two papers \cite{perez2013offshore,hou2017combined} consider offshore windfarms, as this topic has gained more interest in recent years. While there is a large body of research, there are still many unanswered questions when one wants to determine how to get the most energy production from a site. One important question is the wake model to use, where wake is the decrease in energy output of a turbine based on the position of surrounding turbines. This is clearly a core part of determining where to place the turbines, and most wake models still have considerable uncertainty. A variety of methods to optimise turbine placement are used, where local search and genetic algorithms seem to be the most prevalent. While I am currently not planning to do significant research into the optimal methods to determine turbine placement, aspects of this research field are still very relevant as the wake influences the energy output of the site. Additionally the placement of the turbines can affect their failure rate and is therefore important when planning maintenance of the site. Therefore results found in the research of OWF layout will have to be incorporated in accurate models of those sites, and future research can potentially be done in this direction.
+
+%TODO: CONTINUE here
 
 \subsubsection{More general work on stochastic scheduling} \label{sss:stoch}
 A comprehensive overview of various approaches to scheduling within an uncertain environment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochastic project scheduling and fuzzy project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have significant lead times and in-the-moment scheduling is infeasible in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. This method is discussed in more detail in \Cref{ss:meth}. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the Simulator discussed in \Cref{s:sim}. 
