--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -249,10 +249,9 @@ The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}.
 
 Another logistical decision topic related to the offshore windfarm sites is deciding their layout. This is discussed in various papers, such as \cite{mosetti1994optimization,kusiak2010design,saavedra2011seeding,perez2013offshore,hou2017combined}. There has been a significant amount of research in this direction, though most of this research focuses on windfarm on land, instead of offshore. The latter two papers \cite{perez2013offshore,hou2017combined} consider offshore windfarms, as this topic has gained more interest in recent years. While there is a large body of research, there are still many unanswered questions when one wants to determine how to get the most energy production from a site. One important question is the wake model to use, where wake is the decrease in energy output of a turbine based on the position of surrounding turbines. This is clearly a core part of determining where to place the turbines, and most wake models still have considerable uncertainty. A variety of methods to optimise turbine placement are used, where local search and genetic algorithms seem to be the most prevalent. While I am currently not planning to do significant research into the optimal methods to determine turbine placement, aspects of this research field are still very relevant as the wake influences the energy output of the site. Additionally the placement of the turbines can affect their failure rate and is therefore important when planning maintenance of the site. Therefore results found in the research of OWF layout will have to be incorporated in accurate models of those sites, and future research can potentially be done in this direction.
 
-%TODO: CONTINUE here
-
 \subsubsection{More general work on stochastic scheduling} \label{sss:stoch}
-A comprehensive overview of various approaches to scheduling within an uncertain environment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochastic project scheduling and fuzzy project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have significant lead times and in-the-moment scheduling is infeasible in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. This method is discussed in more detail in \Cref{ss:meth}. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the Simulator discussed in \Cref{s:sim}. 
+%TODO: It's weird that I mention Robust Opt will be discussed in 3.2 and then the rest of this section is about robust as well. Fix? Restructure?
+A comprehensive overview of various approaches to scheduling within an uncertain environment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochastic project scheduling and fuzzy project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have significant lead times and in-the-moment scheduling is infeasible in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. This method is discussed in more detail in \Cref{ss:meth}, as it is what I am planning to use for this research. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the tool discussed in \Cref{s:sim}. 
 
 At the time of the above study not a lot of research had been done into robust scheduling. A work that had been published and is mentioned in the study is \cite{sevaux2002genetic}. It is one of the few works I was able to find which attempted to solve a robust scheduling problem using genetic algorithms. Their initial results seemed promising, but their industry partner stopped the collaboration before practical results were found. Since the initial results seemed promising and no reason was found that indicates genetic algorithms are not fit to be used for scheduling problems, this is one of the methods considered for my research, as discussed later in \Cref{ss:meth}.
 
@@ -260,12 +259,13 @@ At the time of the above study not a lot of research had been done into robust s
 
 A more recent overview of the state of robust optimisation is given in \cite{gabrel2014recent}. This study looks at 130 papers, 45 PhD dissertations, and selected other works published between 2007 and 2013 which discussed robust optimisation. The sheer amount of research done reflects the strength of this method. Both the theory and applications of robust optimisation are discussed, and some time is spend discussing its application for scheduling problems. 
 
-%TODO: refine 
+%TODO: refine ?
 In \cite{burke2010multi} a robust optimisation approach is applied to a multi-objective airline scheduling problem, the nature of which has certain similarities to offshore scheduling problems. Their approach, which used both iterative improvement and large-scale simulation, was tested in practice and yielded valuable results, signifying that a similar approach might yield good results for my research as well. 
-Another study looking into robust scheduling is \cite{goren2008robustness}. It considers a single machine scheduling problem where the machine randomly breaks down. A single machine scheduling problem is comparable to a project at an OWF with a single vessel. The vessel temporarily having to wait out weather conditions would then relate to the machine breaking down. For this reason the findings in this study may be roughly applicable in offshore scheduling problems. However one key observation is that single machine scheduling problems often behave different from multi-machine scheduling problems, and most projects on OWFs will employ multiple vessels. 
+Another study looking into robust scheduling is \cite{goren2008robustness}. It considers a single-machine scheduling problem where the machine randomly breaks down. A single-machine scheduling problem is comparable to a project at an OWF with a single vessel. The vessel temporarily having to wait out weather conditions would then relate to the machine breaking down. For this reason the findings in this study may be roughly applicable in offshore scheduling problems. However one key observation is that single machine scheduling problems often behave different from multi-machine scheduling problems, and most projects on OWFs will employ multiple vessels. 
 
-%TODO: Final line `impact' is said to be unclear
-As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which comes from economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (or Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and seems to have had an impact in the literature.
+As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which comes from economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (also called Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and their concept of Pareto Robustly Optimal solutions seems to have been used in various research papers since then. 
+
+%TODO: CONTINUE here
 
 \subsection{Research Methods} \label{ss:meth}
 In the above literature, two main types of methods are used for this problem; optimisation and simulation. Often both are used together, either by tackling one part of the problem with simulation and another with optimisation (as in \cite{barlow2018mixed}), or by creating schedules with an optimisation model, which are then evaluated using simulation (as in \cite{kerkhove2017optimised}). In this section the methods will be discussed in more detail, separate from the research they were used in. Other possible methods for problems of the kind we are looking at will also be discussed. 
@@ -311,6 +311,8 @@ Alternatively, evolutionary algorithms have been used for deterministic scheduli
 When optimisation is to be performed within nondeterministic environments, it is often combined with simulation, such as in \cite{de2003integrating} and \cite{bard2015integrating}. A primary reason for this, and why I plan on using this too, is that simulation is a very effective way to analyse large-scale schedules subject to uncertain conditions. The optimisation and simulation model can be integrated by using the simulation to evaluate a schedule proposed by the optimisation model. This can often give more accurate results than using a simplistic objective function. The simulation model can then return an appropriate metric regarding the quality of the schedule, such as makespan or total cost, and the optimisation model can aim to improve from there. In theory this integration can even be extended; the simulation model can determine metrics relating to specific subsets of tasks, and potentially the optimisation model can use this extensive data to make more effective optimisations. For example, the set of tasks may have several types of tasks or distinct phases separated by milestone tasks. If a certain type or phase of tasks has a high ratio of delayed tasks, this might be a good part of the schedule to focus on for future changes. 
 
 The exact manner in which simulation and optimisation are combined depends on the project and individual models, but the above technique is very promising for offshore construction projects, and similar to the model used in \cite{kerkhove2017optimised}. 
+
+%After refining 3.2 I should look at the concern at top top of 3.1.4 and possibly restructure
 
 \pagebreak
 
