--- a/Annual Review 2019 Report/OneYearReport 0.5.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.5.tex
@@ -156,6 +156,55 @@ While the latter two questions seem similar, they approach the same phenomenon f
 
 \pagebreak
 
+\section{Methods} \label{s:meth}
+The most commonly used methods for projects such as this, which are also the methods I plan to use, will be discussed in this section. These methods are Simulation and Optimisation, and they can be used seperately or together. I will discuss both the basics of the methods, as well as how they apply to this research. 
+
+\subsection{Simulation} \label{ss:sim}
+Simulation, especially Discrete Event Simulation, is a very broadly used method in computational analysis \cite{law2000simulation,robinson2010conceptual}. A simulation effectively walks through every step in a process, letting all random variables take on a specific value. A single run of a simulation like this is not very useful in itself, but if a lot of runs are done (with different specific values for the random variables in every run) it can lead to a better understanding and evaluation of the situation. For example, when a train timetable is made possible delays need to be kept in mind. Delays can cause disturbances and can potentially cause chain reactions when it does not leave a certain platform before the next train is supposed to arrive there. It is very difficult to analyse this process analytically, which makes it very difficult to evaluate a proposed timetable analytically. However if a timetable is used in 1000 runs of a simulation, we can have some idea about how common these disturbances are. Simulations are very suited to help in situations like this, where there are a lot of random variables and events that depend on each other (a platform needs to be empty for the next train to arrive). 
+
+If we look at the offshore projects discussed in my research, the insights we can gain from this are not merely an expected (average) duration of a project. For example, a confidence interval for the costs of the project or the probability a certain task will be completed before a set time can also be examined. However, simulation for these offshore projects heavily relies on the weather model and data. Simulation is primarily about examining the effects of uncertainty, and the weather is a major source of uncertainty, our choice of how to model the weather and which data to use for it is crucial. 
+
+\subsubsection{The weather model} \label{sss:weather}
+If the weather data is limited in precision or amount of data available, the applicability of the simulation results in turn will also be limited. A simulation as detailed as we would like for this type of project would have timesteps in the range of 15 minutes to an hour. A lot of weather data has much larger timesteps, often of several hours. There are methods to interpolate between weather data points, but this tends to not be very precise as there are a lot of factors to take into account. The most important measures of the weather are wind speed and wave height, as by these measures the usability of the vessels can be determined. In order for this data to be realistic, the two measures have to be correlated, as well as have autocorrelation over time. Having those values be realistically interpolated between two measured points is a difficult task, and something we will have to figure out a way to realistically handle for future research.
+
+The amount of data available is also a common problem. A major reason for this is the natural change of weather depending on the time of year. Generally, a year would be split up in sections, for example the four seasons or the twelve months. Intuitively this makes a lot of sense; if we want to model the weather in January data from July is irrelevant for this. But the consequence is the sheer amount of time it takes to collect accurate data for each time period; if we want 300 days of data for the month of April, we need data collected over the span of 10 years. In addition, the conditions of the location the data is gathered from have to be similar to the location of the OWF. An important parameter for this is the distance to the shore, but there are more factors which play a part. 
+
+A method to handle these drawbacks of the weather data is to not use raw data, but analyse the periodic characteristics of the change of both wind and wave states. Using these characteristics, one can generate weather data by drawing a random real data point within the desired time period, and extrapolating the data from there using the found characteristics. This is used frequently in the literature, and has been shown to have a good potential for stochastic simulations. 
+
+Another method we are considering to explore relates more to robust optimisation. It might not be necessary to have a large number of simulations for all possible weather conditions. If, for each time period, we create a range of possible wind and wave states (including the extreme cases from the data) and run simulations for a set of (realistic) combinations of them we could aim to make a robust schedule that performs well within even the most extreme weather scenarios without having too many simulations to run. The drawback of this robust approach is a schedule that performs well in 99\% of weather cases might be discarded for the most extreme 1\% of cases. This can however be reduced by carefully selecting the data to use for the simulations, or allowing a certain number of bad scenarios (especially if the weather causing it is very rare). We might explore this more in future research. 
+
+%TODO: Citations?
+
+\subsection{Optimisation} \label{ss:opt}
+Optimisation, in particular through (mixed-)integer programming, is an essential tool in problems like this, and is used extensively in the literature \cite{nemhauser1999integer,lee2011mixed}. This is effectively the practice of choosing some decision variables to be decided, an objective function based on them to optimise, and the restrictions on the variables. After this is done a computer algorithm can find the allowed values of the decision variables for which the value of the objective function is optimal. 
+
+An example based on OWF planning would be a binary decision variable $x_{ij}$ for each combination of task $i$ and vessel $j$. If $x_{ij}$ is 1 then task $i$ is assigned to vessel $j$ and otherwise $x_{ij}$ is 0. A number of basic restrictions on this would be that the values $x_{ij}$ can only take the values 0 and 1, that each task is assigned to exactly 1 vessel, and possibly that each vessel can only be assigned certain types of tasks (a crew transport vessel cannot be assigned operational tasks). An example objective function could be one that sums up the total expected task duration for each vessel (by summing up the expected durations of all tasks assigned to it) and tries to find values for the $x_{ij}$ variables such that the highest value of this sum over all values in minimised (such that tasks are distributed as evenly as possible). 
+
+There are a number of different categories of this method, based on the possible values the decision variables can take and how the value of the objective function might change depending on them. Linear programming (where the relation between each variable and the value of the objective function is linear) and integer programming (where the decision variables can only take integer values) are generally preferred as other forms are computationally much more complex to solve, and are therefore restricted in size in order to be solved in feasible time. However, many problems require these more complex variations.
+
+Even linear and integer programming models computationally complex to solve, hence many methods are used to reduce to complexity of the models. There are standard techniques like Lagrangian relaxation \cite{fisher1981lagrangian} and column generation \cite{barnhart1998branch}, but there are more specific methods used as well. The primary way this is done is by limiting the scope of individual optimisation problems (not necessarily the research), by splitting up the research and using multi-level optimisation models, or using simulation for certain parts of it. 
+
+Another method has been discussed before already; robust optimisation. As with simulation, this reduces the number of considered inputs (primarily weather states, but also task duration which is sometimes stochastic) by only considering certain constructed uncertainty sets. This strongly reduces the number of situations considered in the optimisation. 
+
+\bigskip
+
+There are different froms of optimisation than computational programming. The most prominent are heuristic methods, such as local search. Heuristics are powerful when dealing with large problems like this, as finding an exact global optimum will usually take an infeasibly long time. A benefit of local search is that reasonably good results can often be found fairly quick, but this is connected to the main drawback of local search; it can often be difficult to get out of local optima. However, there is a lot of literature on local search and other heuristics and many variants designed to reduce its drawbacks. 
+
+Alternatively, evolutionary algorithms have been used for deterministic scheduling problems such as machine learning \cite{dorndorf1995evolution}. A good explanation of this technique for scheduling is given in \cite{cotta2007memetic}. While this technique seems to be fairly common in deterministic scheduling, not much research could be found in an uncertain setting. The exception is \cite{sevaux2002genetic} as discussed in \Cref{sss:stoch}. This research, although seemingly brief, gives quality results. Since there is no clear reason why evolutionary algorithms couldn't work well within an uncertain setting, this is a potential method to explore in the future. 
+
+\subsection{Combining Simulation and Optimisation} \label{ss:simopt}
+%TODO: Double check if I don't want to say more about my method of combining opt and sim should be explained more here (based on whats discussed later and the research questions and stuff
+When optimisation is to be performed within nondeterministic environments, it is often combined with simulation, such as in \cite{de2003integrating} and \cite{bard2015integrating}. A primary reason for this, and why I plan on using this too, is that simulation is a very effective way to analyse large-scale schedules subject to uncertain conditions. The optimisation and simulation model can be integrated by using the simulation to evaluate a schedule proposed by the optimisation model. This can often give more accurate results than using a simplistic objective function. The simulation model can then return an appropriate metric regarding the quality of the schedule, such as makespan or total cost, and the optimisation model can aim to improve from there. In theory this integration can even be extended; the simulation model can determine metrics relating to specific subsets of tasks, and potentially the optimisation model can use this extensive data to make more effective optimisations. For example, the set of tasks may have several types of tasks or distinct phases separated by milestone tasks. If a certain type or phase of tasks has a high ratio of delayed tasks, this might be a good part of the schedule to focus on for future changes. 
+
+The exact manner in which simulation and optimisation are combined depends on the project and individual models, but the above technique is very promising for offshore construction projects, and similar to the model used in \cite{kerkhove2017optimised}. 
+
+\pagebreak
+
+\section{Literature} \label{s:lit}
+%TODO CONTINUE paste in the stuff from inside the iffalse
+
+\iffalse
+
 \section{Literature} \label{s:lit}
 In this section I will give an overview of the literature I have read to-date for this research. I will discuss some actual attempts to produce a schedule for the installation problem in \Cref{sss:sched}, and research on the maintenance of the site will be shown in \Cref{sss:maint}. Other research related to offshore projects is shown in \Cref{sss:offsh}. Some other studies to do with uncertain scheduling will be highlighted in \Cref{sss:stoch}.  Afterwards in \Cref{ss:meth} the theory and development of common methods for these problems will be discussed.
 
@@ -250,7 +299,7 @@ The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}.
 Another logistical decision topic related to the offshore windfarm sites is deciding their layout. This is discussed in various papers, such as \cite{mosetti1994optimization,kusiak2010design,saavedra2011seeding,perez2013offshore,hou2017combined}. There has been a significant amount of research in this direction, though most of this research focuses on windfarm on land, instead of offshore. The latter two papers \cite{perez2013offshore,hou2017combined} consider offshore windfarms, as this topic has gained more interest in recent years. While there is a large body of research, there are still many unanswered questions when one wants to determine how to get the most energy production from a site. One important question is the wake model to use, where wake is the decrease in energy output of a turbine based on the position of surrounding turbines. This is clearly a core part of determining where to place the turbines, and most wake models still have considerable uncertainty. A variety of methods to optimise turbine placement are used, where local search and genetic algorithms seem to be the most prevalent. While I am currently not planning to do significant research into the optimal methods to determine turbine placement, aspects of this research field are still very relevant as the wake influences the energy output of the site. Additionally the placement of the turbines can affect their failure rate and is therefore important when planning maintenance of the site. Therefore results found in the research of OWF layout will have to be incorporated in accurate models of those sites, and future research can potentially be done in this direction.
 
 \subsubsection{More general work on stochastic scheduling} \label{sss:stoch}
-%TODO: It's weird that I mention Robust Opt will be discussed in 3.2 and then the rest of this section is about robust as well. Fix? Restructure?
+%TODO: It's weird that I mention Robust Opt will be discussed in 3.2 and then the rest of this section is about robust as well. Fix? Restructure? Generally find a specific place to talk aobut robust and put it there
 A comprehensive overview of various approaches to scheduling within an uncertain environment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochastic project scheduling and fuzzy project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have significant lead times and in-the-moment scheduling is infeasible in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. This method is discussed in more detail in \Cref{ss:meth}, as it is what I am planning to use for this research. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the tool discussed in \Cref{s:sim}. 
 
 At the time of the above study not a lot of research had been done into robust scheduling. A work that had been published and is mentioned in the study is \cite{sevaux2002genetic}. It is one of the few works I was able to find which attempted to solve a robust scheduling problem using genetic algorithms. Their initial results seemed promising, but their industry partner stopped the collaboration before practical results were found. Since the initial results seemed promising and no reason was found that indicates genetic algorithms are not fit to be used for scheduling problems, this is one of the methods considered for my research, as discussed later in \Cref{ss:meth}.
@@ -315,6 +364,8 @@ The exact manner in which simulation and optimisation are combined depends on th
 
 %After refining 3.2 I should look at the concern at top top of 3.1.4 and possibly restructure
 %Possibly swap 3.2 and 3.1, and have Methods be purely explaining the methods and their strenghts and weaknesses for this project? (maybe split them to two fully seperate section too?)
+
+\fi
 
 \pagebreak
 
