Updated sections 5 and 6

--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -400,3 +400,33 @@
   year={2015},
   publisher={Taylor \& Francis}
 }
+
+@incollection{hume1784enquiry,
+  title={An enquiry concerning human understanding},
+  author={Hume, David},
+  year={1784},
+}
+
+@incollection{hume2016enquiry,
+  title={An enquiry concerning human understanding},
+  author={Hume, David},
+  booktitle={Seven masterpieces of philosophy},
+  pages={191--284},
+  year={2016},
+  publisher={Routledge}
+}
+
+@inproceedings{bhaskar1998critical,
+  title={Critical realism},
+  author={Bhaskar, Roy and Collier, A and Lawson, T and Norrie, A},
+  booktitle={Proceedings of the Standing Conference on Realism and Human Sciences, Bristol, UK},
+  volume={4},
+  year={1998}
+}
+
+@book{archer2013critical,
+  title={Critical realism: Essential readings},
+  author={Archer, Margaret and Bhaskar, Roy and Collier, Andrew and Lawson, Tony and Norrie, Alan},
+  year={2013},
+  publisher={Routledge}
+}
