--- a/Annual Review 2019 Report/OneYearReport 0.5.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.5.tex
@@ -164,7 +164,7 @@ Simulation, especially Discrete Event Simulation, is a very broadly used method 
 
 If we look at the offshore projects discussed in my research, the insights we can gain from this are not merely an expected (average) duration of a project. For example, a confidence interval for the costs of the project or the probability a certain task will be completed before a set time can also be examined. However, simulation for these offshore projects heavily relies on the weather model and data. Simulation is primarily about examining the effects of uncertainty, and the weather is a major source of uncertainty, our choice of how to model the weather and which data to use for it is crucial. 
 
-\subsubsection{The weather model} \label{sss:weather}
+\subsubsection{Reliance on weather data} \label{sss:weather}
 If the weather data is limited in precision or amount of data available, the applicability of the simulation results in turn will also be limited. A simulation as detailed as we would like for this type of project would have timesteps in the range of 15 minutes to an hour. A lot of weather data has much larger timesteps, often of several hours. There are methods to interpolate between weather data points, but this tends to not be very precise as there are a lot of factors to take into account. The most important measures of the weather are wind speed and wave height, as by these measures the usability of the vessels can be determined. In order for this data to be realistic, the two measures have to be correlated, as well as have autocorrelation over time. Having those values be realistically interpolated between two measured points is a difficult task, and something we will have to figure out a way to realistically handle for future research.
 
 The amount of data available is also a common problem. A major reason for this is the natural change of weather depending on the time of year. Generally, a year would be split up in sections, for example the four seasons or the twelve months. Intuitively this makes a lot of sense; if we want to model the weather in January data from July is irrelevant for this. But the consequence is the sheer amount of time it takes to collect accurate data for each time period; if we want 300 days of data for the month of April, we need data collected over the span of 10 years. In addition, the conditions of the location the data is gathered from have to be similar to the location of the OWF. An important parameter for this is the distance to the shore, but there are more factors which play a part. 
@@ -307,44 +307,48 @@ As for research about the theory of robust optimisation, \cite{iancu2013pareto} 
 
 \pagebreak
 
-\section{Simulation tool} \label{s:sim}
-In addition to reviewing the literature, I have also laid the foundations for some practical experiments. I have programmed the basics of an adaptable simulator from scratch. It is not yet operational and not very developed so far, but it can easily be expanded upon to fit future research. The use of this simulator would be checking feasibility of a generated schedule and analysing the impacts of uncertain factors of the project.
+\section{Simulation and optimisation tool} \label{s:sim}
+In addition to reviewing the literature, I have also laid the foundations for some practical experiments. I have programmed the basics of an adaptable simulator from scratch. It is not yet operational and not very developed so far, but it can easily be expanded upon to fit future research. The use of this simulator would be checking feasibility of a generated schedule and analysing the impacts of uncertain factors of the project. Connected to this I aim to implement the optimisation models, so that an entire integrated mixed-method model is implemented and can generate and evaluate schedules. I will talk more about this planned model in \Cref{s:concl}.
 
-It was implemented in C++, as it seems well suited for this and I have previously used this language. A benefit of C++ is that it is a very commonly used language so modules are available for a lot of things I might want to add to the simulator, and it could potentially be integrated with other languages like Matlab if there is a need for that in the future. 
+It was implemented in C++, as it seems well suited for this and I have previously used this language. A benefit of C++ is that it is a very commonly used language so modules are available for a lot of things I might want to add to the tool (such as algorithms to solve the optimisation model), and it could potentially be integrated with other languages like Matlab if there is a need for that in the future. 
 
-In this section I will first describe the current progress of the simulator and some failed previous attempts at programming it. Afterwards, I will outline my plans for what the simulator will be in the future of this research.
+In this section I will first describe the current progress of the tool and some failed previous attempts at programming it. Afterwards, I will outline my plans for what the tool will be in the future of this research.
 
 \subsection{Current progress} \label{ss:simprog}
-Currently the simulator uses discrete event simulation to simulate a set of installation or maintenance vessels and supply barges (hereafter collectively referred to as vessels) that each have a set of tasks to go through. The tasks are the practical operations on the site, as well as all transits between locations and loading tasks at the port. All supplies and crew are assumed to be present at the port at the required time. The installation vessels are assumed to be identical, as are the supply barges. When a vessel finishes a task at time $t$ it will look at the next task $a$ assigned to it. If for task $a$ each preceding task is completed (which may not be the case if another vessel has to do some preceding tasks) and $a$ has been released (the release time $r_a < t$) the vessel will start on the task. This means an event is added to the event queue to signify the completion of task $a$, at time $t + d_a$ where $d_a$ is the duration of task $a$. This duration is currently fully deterministic. At every timestep I check for each vessel whether the current weather is acceptable for its task. If this is not the case, the time at which the task is completed is pushed back by 1 timestep, effectively halting operations for that timestep. However, since the weather currently is not yet being generated, this is not causing any delays. 
+Currently the simulator uses discrete event simulation to simulate a set of installation or maintenance vessels and supply barges (hereafter collectively referred to as vessels) that each have a set of tasks to go through. The tasks are the practical operations on the site, as well as all transits between locations and loading tasks at the port. All supplies and crew are assumed to be present at the port at the required time. The installation or maintenence vessels are assumed to be identical, as are the supply barges. When a vessel finishes a task at time $t$ it will look at the next task $a$ assigned to it. If for task $a$ each preceding task is completed (which may not be the case if another vessel has to do some preceding tasks) and $a$ has been released (the release time $r_a < t$) the vessel will start on the task. This means an event is added to the event queue to signify the completion of task $a$, at time $t + d_a$ where $d_a$ is the duration of task $a$. This duration is currently fully deterministic, but that will be changed later. At every timestep I check for each vessel whether the current weather is acceptable for its task. If this is not the case, the time at which the task is completed is pushed back by until it can be completed, effectively halting operations for that timestep. However, since the weather currently is not yet being generated, this is not causing any delays. 
 
-This is repeated for every vessel and task, until that vessel has completed all its tasks. At that point it is assumed to be back at the port, as the tasks will represent the actual operations working on the assets, as well as transit between operations and transits from and to the port. Hence the last task is the transit from the OWF to the port. 
+This is repeated for every vessel and task, until a vessel has completed all its tasks. At that point it is assumed to be back at the port, as the tasks will represent the actual operations working on the assets, as well as transit between operations and transits from and to the port. Hence the last task is the transit from the OWF to the port. Once all vessels are back at the port the simulation is complete. 
 
 \bigskip
 
-As of yet, this is clearly a rather bare-bones setup. However, everything is programmed to be expandable, and I have plans on how to make this model more useful. How I plan to do this I will explain in \Cref{ss:simfut} but for now I would like to make a remark on previous failed attempts to program this. In my first attempt, I did not actually simulate different vessels and simply had a count of how many vessels were available. After some simple test cases two major problems with this approach emerged. The first is that each vessel necessarily had to be identical. While they currently are still identical, in my current setup they could easily be given different characteristics. The second problem was that there was not a set of tasks per vessel, and simply a common pool of tasks. This meant that transition between locations could not be a task, as this task would necessarily have to be completed by the same vessels doing the operations at these locations. Another problem with this restriction is that it is simply impractical in reality; the tasks a vessel will complete have to be mostly predetermined for the sake of supplies.
+As of yet, this is clearly a rather bare-bones setup. However, everything is programmed to be expandable, and I have plans on how to make this model more useful. How I plan to do this I will explain in \Cref{ss:simfut} but for now I would like to make a remark on previous failed attempts to program this. In my first attempt, I did not actually simulate different vessels and simply had a count of how many vessels were available. After some simple test cases two major problems with this approach emerged. The first is that each vessel necessarily had to be identical. While they currently are still identical, in my new  setup they could easily be given different characteristics. The second problem was that there was not a set of tasks per vessel, and simply a common pool of tasks. This meant that transition between locations could not be a task, as this task would necessarily have to be completed by the same vessels doing the operations at these locations. Another problem with this restriction is that it is simply impractical in reality; the tasks a vessel will complete have to be mostly predetermined for the sake of supplies.
 
 After realising this I effectively started over with this new vessel structure in mind. There were some other problems during this attempt; for example the realised duration of a task (taking into account both natural delay and weather-based delay) was decided at the moment it was started. The problem with this is that tasks taking a long time can experience very different weather conditions while it is in progress. The weather-based delay was decided at the moment the task was started with the weather conditions at that moment. While in the current implementation there is no weather delay, I ended up changing to my previously described set up to allow for the duration of a task to be influenced by weather during its entire duration and not just at its start. In general, I believe that my current model is very adaptable, and the changes described in \Cref{ss:simfut} can be implemented without changing the primary structure of the simulator. 
 
-Reflecting on these failed attempts, I reckon they originated from me starting the work on the simulator while I was still reading essential parts of the literature. Whilst developing this model, I read about other models for very similar projects, leading me to new realisations about my own model. As I now feel much more caught up with the current literature, I am confident mistakes like this are much less likely to happen again. 
+Reflecting on these failed attempts, I reckon they originated from me starting the work on the simulator while I was still reading essential parts of the literature. Whilst developing this model, I read about other models for very similar projects, leading me to new realisations about my own model. While my model is still in development and some changes are likely to happen, I now feel much more caught up with the current literature, and I am confident mistakes like this are much less likely to happen again. 
 
 \subsection{Future developments} \label{ss:simfut}
 A number of significant assumptions are currently made in the implementation of the simulator that will be relaxed in the future. Vessels can have different characteristics, and they are included in the input. Additionally a key structural assumption is made in assuming every task can (instantly) be halted partway through completion and then (instantly) be resumed when the weather improves. This assumption should not be made for every task, and for each task the input determines whether it can be interrupted. However, when this assumption is relaxed a problem arises; how to handle tasks that cannot be interrupted when the weather changes unexpectedly. Generally this problem is avoided by assuming perfect weather forecasts, but this in itself is a strong assumption and relaxing it might make the simulation more true to reality. This will be discussed a bit more in \Cref{sss:wemo}. 
 
 \subsubsection{Inputs and outputs} \label{sss:inou}
-In the plans I have for this simulator, a lot of things will be added on top of what I currently have. First of all, I want inputs to be read from an excel sheet, and outputs to be written to a different sheet. These inputs would include the task information; precedence relations, weather restrictions, release date, assigned vessel, whether it can be interrupted partway through, etc.  The duration of a task would obviously also be included, but since this duration would no longer be deterministic multiple values need to be decided. Initially I am planning on having tasks follow a triangular distribution, as this is common and practical in scheduling problems \cite{williams1992practical}. This would mean the input for the duration of each task would have a lower and upper limit, and a mode. Potentially this could be changed in the future, giving tasks a more sophisticated probability distribution (possibly depending on the weather conditions), but for my initial experiments I am not planning on doing so.
+In the plans I have for this tool, a lot of things will be added on top of what I currently have. First of all, I want inputs to be read from an spreadsheet, and outputs to be written to a different sheet. These inputs would include the task information; precedence relations, weather restrictions, release date, assigned vessel, whether it can be interrupted partway through, etc.  The duration of a task would obviously also be included, but since this duration would no longer be deterministic multiple values need to be decided. Initially I am planning on having tasks follow a triangular distribution, as this is common and practical in scheduling problems \cite{williams1992practical}. This would mean the input for the duration of each task would have a lower and upper limit, and a mode. Potentially this could be changed in the future, giving tasks a more sophisticated probability distribution (possibly depending on the weather conditions), but for my initial experiments I am not planning on doing so. The original plan is for duration to depend on this triangular distribution, with weather simply determining a binary value for each task; either it can be completed in the current weather, or it can not. 
 
-Technically, this is all the input that is required, as vessel characteristics would only be used to calculate these task characteristics. In that way the speed of a vessel is represented by the duration of the transit task. However, this is an impractical way of giving input. Therefore I am also planning on having a tool to generate the input described above. As input it would take the actual operations required to be done on site and their details, and the vessel characteristics. The operation details are the same as mentioned previously for tasks: duration (as described above), precedence relations, weather restrictions, release date, assigned vessel, whether it can be interrupted partway through. The only thing that is to be added is the location of the operation. However, these tasks would only correspond to the actual installation or maintenance operations the related vessels need to perform. All other tasks (transits on the OWF site, transits between the port and the site, loading tasks at the port, all tasks for supply barges) can be derived from this when the vessel characteristics (and required supplies per task) are given. These vessel characteristics will also be an input for this tool, and will include: average transit speed on the site, average transit speed between the port and the OWF site, average speed of loading on a single asset, weather restrictions for loading and transit tasks, and capacity. 
+Technically, this is all the input that is required, as vessel characteristics would only be used to calculate these task characteristics. In that way the speed of a vessel is represented by the duration of the transit task. However, this is an impractical way of giving input. Therefore I am also planning on having a preprocessing step to generate the input described above. This step would take as input the actual operations required to be done on site and their details, and the vessel characteristics. The operation details are the same as mentioned previously for tasks: duration (as described above), precedence relations, weather restrictions, release date, assigned vessel, whether it can be interrupted partway through. The only thing that is to be added is the location of the operation. However, these tasks would only correspond to the actual installation or maintenance operations the related vessels need to perform. All other tasks (transits on the OWF site, transits between the port and the site, loading tasks at the port, all tasks for supply barges) can be derived from this when the vessel characteristics (and required supplies per task) are given. These vessel characteristics will also be an input for this tool, and will include: average transit speed on the site, average transit speed between the port and the OWF site, average speed of loading on a single asset, weather restrictions for loading and transit tasks, and capacity. 
 
-The aspect of cost should also be included as one of the desired output metrics will be the cost of the project. All costs and profits will be subject to a discount rate. For the on-site operations, a supply cost should be included, which is incurred during the loading task preceding that operation. Additionally any extra costs charged by the vessel provider for certain types of operations should also be included. The day rates and (de)commissioning costs of vessels will be part of the input. A mechanism can be put in place that only allows for vessels to be (de)commissioned when given notice or at certain moments. How exactly this works can be determined in the input file, through a selection of settings. To oppose the costs, the profit gained from a working WTG should also be given. This profit will initially be represented as a flat rate per WTG based on the month of the year. A potential future improvement is to make it depend on the actual simulated wind speeds, but this is not currently planned to be experimented with in this research. Other basic simulation settings will also be part of the input, such as the number of simulations to run and the type of output to give.
+The aspect of cost should also be included as one of the desired output metrics will be the cost of the project. All costs and profits will be subject to a discount rate depending on how far into the project they take place. For the on-site operations, a supply cost should be included, which is incurred during the loading task preceding that operation. Additionally any extra costs charged by the vessel provider for certain types of operations should also be included. The day rates and (de)commissioning costs of vessels will be part of the input. A mechanism can be put in place that only allows for vessels to be (de)commissioned when given notice or at certain moments. How exactly this works can be determined in the input file, through a selection of settings. To oppose the costs, the profit gained from a working WTG should also be given. This profit will initially be represented as a flat rate per WTG based on the month of the year. A potential future improvement is to make it depend on the actual simulated wind speeds, but this is not currently planned to be experimented with in this research. Other basic simulation settings will also be part of the input, such as the number of simulations to run and the type of output to give.
 
 Additionally an input signifying the start date of the project is useful. This matters for the weather simulation, as it is dependent on the time of year. This could be done through an initial task with a release date on the desired start date, but by giving a specific start date for the project all other release dates can be made relative to it, which is convenient when a single schedule is to be tested with various start dates. Potentially I can also add inputs for non-operational periods; for example if we want to pause operations over the most severe winter months. However I am not currently planning on adding that specifically; these experiments can still be done, but through the start dates of tasks. For example if a project will be performed over two summers, but the work will be halted during the winter in between, every task scheduled to be performed in the second summer can simply have a starting date after operations resume. This allows tasks in the first summer to be completed even if they take longer than the planned start of the break. However if it turns out it is desired to have a hard cut-off point after which all operations will halt even if they were planned to be completed in the previous phase of the project, this functionality can be added. 
+
+Everything described above regards the input of the simulator. However while all this input can be given by hand, it can also be produced by the optimisation part of the tool, which can work in conjunction with the simulator. This requires a different set of input. The specifics have not been decided upon yet, but it will follow from the design of the optimisation model. The connection between this simulation and optimisation will be described more in \Cref{s:concl}.
+
+\bigskip
 
 The main output is data regarding the variability of both the costs and makespan of a given project (installation or maintenance). Probabilistic measures on the cost and duration on the project will be recorded over all simulations. These can be used to focus in on vulnerable aspects and look at the expected time and cost certain phases of the project will take (for example, a 90\% confidence interval on when 10\% of the WTGs will be online). Focusing in on measures for categories of tasks will also be possible, like every task performed by a certain vessel or of a specific type. Specific cost related measures will also be able to be found, such as the expected time the project becomes profitable, the net present value of the project, and exact data on the spending and profit every month. 
 
 \subsubsection{Weather model} \label{sss:wemo}
 As the weather conditions are clearly dependent on the time of year, I plan to split the data based on the month it occurred. Apart from that I have not yet fully decided on the specifics of the weather model to generate synthetic weather series. It will be a multivariate auto-regression model including wind speed and wave height, where the two measures are also correlated. The model I will end up using will likely inspired by the models used in the previously mentioned research \cite{dinwoodie2014operational} (also used in \cite{barlow2018mixed}) and \cite{kerkhove2017optimised} as both of these models appear to be adequate.
 
-As mentioned earlier, a decision needs to be made on the presumed knowledge of the weather as well. Certain tasks cannot be interrupted when the weather turns unexpectedly. Therefore either perfect weather forecasts need to be assumed, or a weather forecasting method needs to be used and a strategy of handling interrupted tasks needs to be chosen. Generally the former is chosen, and no previous research on the former is to be found. This is a potential direction to explore in the future, as it is a crucial difference between the reality and the simulation. 
+As mentioned earlier, a decision needs to be made on the presumed knowledge of the weather as well. Certain tasks cannot be interrupted when the weather turns unexpectedly. Therefore either perfect weather forecasts need to be assumed, or a weather forecasting method needs to be used and a strategy of handling interrupted tasks needs to be chosen. Generally the former is chosen, and no previous research on the former is to be found. This is a potential direction to explore in the future, as it is a crucial difference between the reality and the simulation.  However this is likely outside the scope of this research. 
 
 %TODO add references for saying the perfect forecasting is usually used in literature
 %TODO actually look up research on the forecasting
@@ -356,11 +360,23 @@ Over the course of my PhD so far, I have also taken part in three additional cou
 
 \bigskip
 
-In December 2018 I took part in the Research Philosophy course at my own Strathclyde Business School. The course mainly discussed different paradigms that research can be conducted in, relating to various views whether objective truth exists, and whether one can come to know objective facts about such truths. Researcher bias was discussed at length, and how (within some views) this will affect any statement regarding truth. For example, if one conducts a survey and in any way summarises the results or aims to draw any conclusion from them, this is affected by subjective bias. While I found the course personally interesting due to a strong interest in philosophy, the subjects discussed were not very related to my PhD project. This is likely the result of my project being a Natural Science project, while the course was primarily aimed at researchers working in Social Science fields. I wrote an essay for this course, which had to relate the subjects discussed in the course to my own research, and I ended up writing about whether mathematics is a core feature of the universe, or simply a human-invented tool to describe the universe. I chose this topic as it is one of the biggest philosophical debates regarding mathematics, and if one was to take the latter position this means than any research result achieved through mathematics does not necessarily correspond to reality. Like the rest of the course, I find this topic personally interested, but it is unlikely to strongly affect my research. 
+In December 2018 I took part in the Research Philosophy course at my own Strathclyde Business School. The course mainly discussed different paradigms that research can be conducted in, relating to various views whether objective truth exists, and whether one can come to know objective facts about such truths. Researcher bias was discussed at length, and how (within some views) this will affect any statement regarding truth. For example, if one conducts a survey and in any way summarises the results or aims to draw any conclusion from them, this is affected by subjective bias. 
+
+While I found the course personally interesting due to a strong interest in philosophy, at first glance the subjects discussed did not seem very related to my PhD project. This was the result of my project being a Natural Science project, while the course was primarily aimed at researchers working in Social Science fields. I wrote an essay for this course, which had to relate the subjects discussed in the course to my own research, and I ended up writing about whether mathematics is a core feature of the universe, or simply a human-invented tool to describe the universe. I chose this topic as it is one of the biggest philosophical debates regarding mathematics, and if one was to take the latter position this means than any research result achieved through mathematics does not necessarily correspond to reality. 
+
+However, since then the topics discussed in the course have stayed with me, and my views on their applicability have changed. The example of the survery results being summarised can apply to my research as well. In modelling one will always have to choose some assumptions and prefereces regarding focus. For example, in \Cref{ss:offsh} I briefly touch on the topic of crew scheduling. I conclude that this problem is interesting but outside my scope, which is a clear example of my bias in research direction. Additionally I then make the assumption that this problem will be handled by the company renting out the vessels. This does seem to be common practice, but if my bias had instead been to include this area of research, I would probably not have made that same assumption. 
+
+Another example that subjectivity comes into this project is that while it primarily regards Natural Science, it regards an application of that science. Therefore human bias will still be a part of this project. For example, I can develop a system to recommend a set of schedules, but which schedule will actually be used comes down to human choice. Even when a schedule is chosen, it will not be followed exactly, as in practice things are never as precise as they are in a mathematical model. This is a result of an inherent disconnect between the abstract mathemathical world and the real world. This means that if my goal is to improve project management in the real world, there will always be a subjective angle to this, even when my primary methods deal with abstract and objective mathematical models and systems. 
+
+In accordance with what was taught in this class, I will give a note here regarding my understanding of the natural world and the extend to which science can know things about this world. This was explained in this class as a requirement to give the reader some understand of my bias, possibly to an extend that I personally cannot be aware of. My view can best be described as Critical Realism \cite{bhaskar1998critical,archer2013critical}, which posits that there is a real world to be studies. Science attempts to understand the mechanisms of this world, but Critical Realists believe it can never be fully certain of its complete understand of those mechanisms. A mechanism might exist, but its activation might come paired with another mechanism that counters it, making it unobservable. Therefore I believe there is an objective truth, but it is unknowable. Science is the attempt to refine our understanding of the mechanisms of the universe to get closer to that ultimately unknowable truth. This is consistent with David Humes understanding that it is impossible to witness causation \cite{hume2016enquiry} and that, while we can expect a pool ball to move when hit by another ball, we can never be certain that the move of one ball directly causes the move of the other, as we can never be certain we know all mechanisms at play here. 
 
 \bigskip
 
-In October 2019 I took a related course discussing Research Methods. This was at the Strathclyde Business School as well, and it is supposed to be a course leading into Research Philosophy. However, due to administrative issues, I took these courses in the opposite order. As with Research Philosophy, this primarily discussed Social Science topics, as most of the methods discussed had to do with interviews and surveys, and most of the speakers had a Sociology or Psychology background. This was personally interesting as well, but even less applicable to my research than the previous course. I am yet to write an essay for this course, but as it is supposed to be about the research methods I might use in my research this essay will likely be a shortened version of \Cref{s:meth} of this report. 
+In October 2019 I took a related course discussing Research Methods. This was at the Strathclyde Business School as well, and it is supposed to be a course leading into Research Philosophy. However, due to administrative issues, I took these courses in the opposite order. As with Research Philosophy, this primarily discussed Social Science topics, as most of the methods discussed had to do with interviews and surveys, and most of the speakers had a Sociology or Psychology background. Therefore these lectures appeared even less applicable than those of Research Philosophy. 
+
+However my change of view regarding Research Philosophy also affected the topics of this course, albeit to a lesser extend. While I tend to think of my research as abstract Natural Science (in accordance with my background in Mathemathics and Computing Science), the desired applicability of my research and results requires it to relate to the real world. My primary methods of Simulation and Optimisation can be summarised as Modelling, and in order for a model to be applicable it needs to correspond to the real world as close as possible. To achieve that correspondence, I will likely need to interview experts in the field; I cannot just guess the ways of operation at an OWF, I should get information from those who are closely related to operations there. In this way, some of the methods discussed in the course will likely prove more useful than originally thought. 
+
+For this course I wrote another essay. In it I primarily wrote about my two main methods, Simulation and Optimisation. I discussed what they were, their strenghts and weaknesses, and the difference between the two. I also talked how they can be used together, and how I am planning to do so. In practice, this essay was an adapted version of \Cref{s:meth}, changed in some places to be more suitable for readers less familiar with the methods. 
 
 \bigskip
 
